
  - Make SCons aware that "\bilbiography" in TeX source files means
    that related .bbl and .blg bibliography files will be created.
    (NOTE:  This still needs to search for the string in \include files.)

  From David Gruener:

  - Fix inconsistent handling of Action strfunction arguments.

  - Preserve white space in display Action strfunction strings.

  From Steven Knight:

  - Speed up the Taskmaster significantly by avoiding unnecessary
    re-scans of Nodes to find out if there's work to be done, having it
    track the currently-executed top-level target directly and not
    through its presence on the target list, and eliminating some other
    minor list(s), method(s) and manipulation.

  - Fix the expansion of $TARGET and $SOURCE in the expansion of
    $INSTALLSTR displayed for non-environment calls to InstallAs().

  - Fix the ability to have an Alias() call refer to a directory
    name that's not identified as a directory until later.

  - Enhance runtest.py with an option to use QMTest as the harness.
    This will become the default behavior as we add more functionality
    to the QMTest side.

  - Let linking on mingw use the default function that chooses $CC (gcc)
    or $CXX (g++) depending on whether there are any C++ source files.

  - Work around a bug in early versions of the Python 2.4 profile module
    that caused the --profile= option to fail.

  - Only call Options validators and converters once when initializing a
    construction environment.

  - Fix the ability of env.Append() and env.Prepend(), in all known Python
    versions, to handle different input value types when the construction
    variable being updated is a dictionary.

  - Add a --cache-debug option for information about what files it's
    looking for in a CacheDir().

  - Document the difference in construction variable expansion between
    {Action,Builder}() and env.{Action,Builder}().

  From Arve Knudsen:
